$Id: changelog,v 1.113 2015/10/23 08:43:33 alfred Exp $
------------------------------------------------------------------------------

2015-10-23 [1.42 Bld 105]

- Bugfix      : Correct Handling of nested structures and unions
- Addition    : Allow unnamed structures and unions
- Bugfix      : Correct some SFR definitions for DS80C320
- Addition    : Allow ? as argument to BYT/FCB/ADR/FDB to reserve space

2015-10-17 [1.42 Bld 104]

- Bugfix      : Correct SHARED symbol output in C mode

- Bugfix      : Correct coding of CC on 6809 for push/pull

2015-09-26 [1.42 Bld 103]

- Bugfix      : On 8008, the assembler accidentally allowed
                INR, DCR and MOV with invalid register operands.

2015-08-30 [1.42 Bld 102]

- Bugfix      : yet another fix to correct handling of BSR
                on 68K

2015-08-19 [1.42 Bld 101]

- Bugfix      : correct PC-relative addressing on 807x target

- Bugfix      : add missing condition codes of 68K FPU

- Bugfix      : correct handling of 68K BSR instruction with
                8 bit displacement

2015-08-17 [1.42 Bld 100]

- Bugfix      : default integer constant mode for INS807x was
                Intel and not C as documented
- Bugfix      : various fixes & extensions for 807x target

2015-08-07 [1.42 Bld 99]

- Bugfix      : Correct handling of variadic macros
- Bugfix      : Suppress detection of 0x... as floating
                point constant on some platforms

2015-05-25 [1.42 Bld 98]

- Addition    : Add TMS1000 target

2014-12-20 [1.42 Bld 97]

- Bugfix      : repair -cpu command line option that was broken in previous build

2014-12-07 [1.42 Bld 96]

- Change      : rework/cleanup PIC, 1802, 3201x, 3202x, 3203x, 3206x, 3254x,
                4004, MELPS4500, 47Cxx, MCS-48/51, 56K, PowerPC, 65xx, 68xx, 68K targets

- Addition    : Add TLCS-870/C target

- Bugfix      : correct handling of TLCS-870 JR instruction without condition

2014-09-21 [1.42 Bld 95]

- Change      : flip order of changelog
