@@ -58,9 +58,12 @@
 /*           2002-03-03 use FromFile, LineRun fields in input tag            */
 /*                                                                           */
 /*****************************************************************************/
-/* $Id: as.c,v 1.54 2015/10/23 08:43:33 alfred Exp $                          */
+/* $Id: as.c,v 1.55 2015/10/25 20:06:11 alfred Exp $                          */
 /*****************************************************************************
  * $Log: as.c,v $
+ * Revision 1.55  2015/10/25 20:06:11  alfred
+ * - regard new END... struction/union instructions
+ *
  * Revision 1.54  2015/10/23 08:43:33  alfred
  * - beef up & fix structure handling
  *
@@ -2513,8 +2516,9 @@ Boolean HasLabel(void)
     case 'S':
       return ((!Memo("SET")) || (SetIsOccupied)) && (!(Memo("STRUCT") || Memo("STRUC")));
     case 'E':
-      return ((!Memo("EVAL")) || (!SetIsOccupied))
-           && (!Memo("EQU")) && (!(Memo("ENDSTRUCT") || Memo("ENDS")));
+      if (Memo("EQU") || Memo("ENDSTRUCT") || Memo("ENDS") || Memo("ENDSTRUC") || Memo("ENDUNION"))
+        return False;
+      return !(Memo("EVAL") && SetIsOccupied);
     case 'U':
       return (!Memo("UNION"));
     default:
